--- a/less/style.less
+++ b/less/style.less
@@ -99,6 +99,7 @@ Search Screen
 .page-s #bg-12 {
   background-image: url("../images/02-IMG_9158.jpg");
   -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
   filter: blur(10px);
 }
 
@@ -375,7 +376,6 @@ Form Elements
 
 .typeahead {
   background-color: #fff;
-  width: 400px;
 }
 
 .typeahead:focus {
@@ -679,10 +679,20 @@ Results
     display:none;
   }
 
+  // #app-wrapper {
+  //   padding-bottom:80px;
+  // }
+  #replay-intro {
+    position:absolute;
+    top:100px;
+    z-index:5;
+  }
+
   #the-app {
     width:100%;
     min-height:100vh;
-    background-color:rgba(255,255,255,.5);
+    position: relative;
+    z-index:4;
   }
 
   h1 {
@@ -908,6 +918,7 @@ Results
   #bg-12 {
     background-image: url("../images/02-IMG_9158.jpg");
     -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
     filter: blur(5px);
   }
   #bg-11-overlay {
@@ -1052,4 +1063,26 @@ Results
       min-height: 25vh;
     }
   }
+}
+
+
+
+/* ==========================================================================
+Framed vs Not Framed
+========================================================================== */
+iframe {
+  opacity:0;
+
+  transition: opacity .5s ease-in-out;
+  -moz-transition: opacity .5s ease-in-out;
+  -webkit-transition: opacity .5s ease-in-out;
+}
+body.iframed {
+  background-color:transparent;
+}
+.iframed #cpd-header {
+  display:none;
+}
+.iframed #bg-12 {
+  display:none;
 }
