--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
 {{ JS.push('vendor/jquery/dist/jquery.js') }}
 {{ JS.push('vendor/underscore/underscore.js') }}
 {{ JS.push('vendor/backbone/backbone.js') }}
+{{ JS.push('vendor/pym.js/dist/pym.min.js') }}
 {{ JS.render('js/libraries.min.js') }}
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
