--- a/less/style.less
+++ b/less/style.less
@@ -69,9 +69,21 @@ Navigation
 /* ==========================================================================
 Search Screen               
 ========================================================================== */
-.container {
-  max-width:1600px;
-  padding: 80px 0;
+.container.cpd-container {
+  width:100%;
+  max-width:1248px;
+  padding: 60px 0 20px 0;
+
+  &:before {
+    display: table;
+    content: " ";
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  .cpd-container-inner {
+    margin:20px;
+  }
   .jumbotron {
     background-color:transparent;
     border-radius:0;
@@ -102,6 +114,9 @@ Search Screen
   -webkit-filter: blur(10px);
   -moz-filter: blur(10px);
   filter: blur(10px);
+}
+#bg-solid {
+  background-color:@cr-darkest;
 }
 
 body.cases {
@@ -449,11 +464,16 @@ Results
 }
 
 .case {
+  width:100%;
   border:1px solid @cr-darkest;
   background-color: @cr-lightest;
-  margin:0 0 2em;
+  margin:0 0 20px;
   display:flex;
   flex-wrap:wrap;
+
+  &:last-of-type{
+    margin-bottom:0;
+  }
 
   &:hover {
     box-shadow: 0px 0px 3px @cr-darkest;
@@ -484,6 +504,7 @@ Results
       h3 {
         color:@cr-alert;
         font-family:@cr-condensed;
+        margin-top: 0;
       }
     }
   }
@@ -578,14 +599,54 @@ Results
   }
 }
 
+.case-detail {
+  background-color:@cr-lightest;
+  padding:20px;
+
+  h1 {
+    margin-top:0;
+  }
+}
+
+.officer {
+  padding: 20px;
+  background-color: @cr-lightest;
+  border: 1px solid @cr-darkest;
+  margin-bottom: 20px;
+  position:relative;
+
+  &:last-of-type {
+    margin-bottom:0;
+  }
+
+  .officer-text {
+    padding-left:140px;
+    background:url("../images/police-icon.svg") center left no-repeat;
+    background-size:contain;
+    position:relative;
+
+    h2 {
+      margin-top:0;
+    }
+  }
+
+  .officer-logo {
+    width: 140px;
+    background-color: @cr-darkest;
+    min-height: 100%;
+    position: absolute;
+    margin: -20px 0 -20px -20px;
+  }
+}
+
 label.results-label {
-  width:49.5%;
+  float:left;
   display:inline-block;
-  line-height: 26px;
+  line-height: 40px;
 }
 .case-list-sort-container {
+  float:right;
   margin: 0 0 16px 0;
-  width: 50%;
   text-align: right;
   display:inline-block;
   label {
@@ -732,6 +793,7 @@ Results
     position:absolute;
     top:100px;
     z-index:5;
+    display:none;
   }
 
   #the-app {
@@ -866,6 +928,7 @@ Results
     margin-bottom:0;
     padding:0 18%;
     text-shadow: 0px 0px 30px rgba(0, 0, 0, 1);
+    text-align:center;
 
       img {
         max-width:20px;
@@ -1129,6 +1192,6 @@ body.iframed {
 .iframed #cpd-header {
   display:none;
 }
-.iframed #bg-static {
+.iframed #bg-static, .iframed #bg-solid {
   display:none;
 }
