--- a/templates/_case.html
+++ b/templates/_case.html
@@ -1,36 +1,36 @@
 
-<div class="case" data-case_number="{{ case.case_number }}">
+<div class="case-detail" data-case_number="{{ case.case_number }}">
 
-  <div class="card-row">
-    <div class="case-payment">
-      <h2>{{ total_for_payments(case.payments) }}</h2>
-      <h3>{{ case.primary_cause }}</h3>
-    </div>
+  <h1>Case {{ case.case_number }}</h1>
 
-    <div class="case-description">
-      <h4>Case {{ case.case_number }}</h4>
-
-       <p>In facilisis scelerisque dui vel dignissim. Sed nunc orci, ultricies congue vehicula quis, facilisis a orci. In aliquet facilisis condimentum. Donec at orci orci, a dictum justo.  Donec at orci orci, a dictum justo.</p>
-
-       <ul class="case-details">
-         <li>Case number: {{ case.case_number }}</li>
-         <li>
-           <span>Plaintiff: </span>
-           {% for victim in case.victims %}
-             {{ victim.victim_1 }}
-           {% endfor %}
-         </li>
-         <li><span>Incident date: </span>{{ case.date_of_incident }}</li>
-         <li><span>Location: </span>{{ case.address }}</li>
-       </ul>
-    </div>
+  <div class="case-payment">
+    <h2>{{ total_for_payments(case.payments) }}</h2>
+    <h3>{{ case.primary_cause }}</h3>
   </div>
 
-  <div class="case-officers">
-    <h5>Officers involved:</h5>
-     {% for officer in case.officers %}
-      <a href="{{ url_for('cpd_settlements.officer', slug=officer.slug) }}" class="police-icon" data-firstname="{{ officer.first }}" data-lastname="{{ officer.last }}" {% if officer.badge_number %}(data-badge="{{ officer.badge_number }}"){% endif %}>  </a>
-     {% endfor %}
+  <div class="case-description">   
+
+     <p>In facilisis scelerisque dui vel dignissim. Sed nunc orci, ultricies congue vehicula quis, facilisis a orci. In aliquet facilisis condimentum. Donec at orci orci, a dictum justo.  Donec at orci orci, a dictum justo.</p>
+
+     <ul class="case-details">
+       <li>Case number: {{ case.case_number }}</li>
+       <li>
+         <span>Plaintiff: </span>
+         {% for victim in case.victims %}
+           {{ victim.victim_1 }}
+         {% endfor %}
+       </li>
+       <li><span>Incident date: </span>{{ case.date_of_incident }}</li>
+       <li><span>Location: </span>{{ case.address }}</li>
+     </ul>
   </div>
 
 </div>
+
+
+  <div class="case-officers">
+    <label class="results-label" style="float:none;margin-top:20px;">Officers involved:</label>
+     {% for officer in case.officers %}
+      {% include 'templates/_officer.html' %}
+     {% endfor %}
+  </div>
