--- a/templates/search.html
+++ b/templates/search.html
@@ -17,21 +17,22 @@
     <h1>Cases</h1>
     <h2>The City of Chicago paid {{ total_for_payments(payments) }} in {{ cases|length }} legal settlements in police misconduct cases between January 2012 and June 2015.</h2>
   </div> -->
+  <div id="bg-solid" class="bgimg"></div>
   <div id="bg-static" class="bgimg"></div>
-  <div class="container">
+  <div class="container cpd-container">
 
-  {% block search %}
-    {% include 'templates/_search.html' %}
-  {% endblock search %}
+    <div class="cpd-container-inner">
+    {% block search %}
+      {% include 'templates/_search.html' %}
+    {% endblock search %}
 
-  <div id="results-wrapper">
-    <div class="results-wrapper-inner">
-      <div id="search-intro">Search the settlement database</div>
-      <div id="case-search-statement"></div>
-    </div>
-    <div class="results-wrapper-inner">
-      <div class="case-list row">
-        <div class="col-xs-12">
+    <div id="results-wrapper">
+      <div class="results-wrapper-inner">
+        <div id="search-intro">Search the settlement database</div>
+        <div id="case-search-statement"></div>
+      </div>
+      <div class="results-wrapper-inner">
+        <div class="case-list">
           <label class="results-label">Results</label>
           <div class="case-list-sort-container">
             <label for="case-list-sort">Sort by</label>
@@ -40,30 +41,24 @@
               <option value="payment-low-high">Payment, low to high</option>
             </select>
           </div>
-        </div>
-        <div class="col-xs-12">
           <div class="case-list-inner" id="case-list-view">
             {% for case in cases %}
               {% include 'templates/_case.html' %}
             {% endfor %}
           </div>
         </div>
-      </div>
 
-      <div class="officer-list row">
-        <div class="col-xs-12">
-          <h3>Officers</h3>
-        </div>
-        <div class="col-xs-12">
+        <div class="officer-list">
+          <label class="results-label">Officers</label>
           <div class="officer-list-inner" id="officer-list-view">
             {% for officer in officers %}
               {% include 'templates/_officer.html' %}
             {% endfor %}
           </div>
         </div>
-      </div>
-    </div> <!--end: results wrapper inner-->
-  </div> <!--end: results wrapper-->
+      </div> <!--end: results wrapper inner-->
+    </div> <!--end: results wrapper-->
+  </div><!--end: container-inner-->
 </div><!--end: container-->
 {% endblock content %}
 
@@ -144,14 +139,17 @@
 
 <script type="text/template" id="officer-tmpl">
   <div class="officer" data-case_number="<%= model.case_number %>">
-    <h2><a href="<%= site_path %>officer/<%= model.slug %>"><%= model.prefix %> <%= model.first %> <%= model.last %></a></h2>
-    <div class="badge-num"><span>Badge #:</span> <%= model.badge_number %></div>
-    <div class="total-payments-container"><span class="total-payments">$<%= Number(model.total_payments).formatMoney() %></span> <span>total payments for all related cases</span><div>
+    <div class="officer-logo"></div>
+    <div class="officer-text">
+      <h2><a href="<%= site_path %>officer/<%= model.slug %>"><%= model.prefix %> <%= model.first %> <%= model.last %></a></h2>
+      <div class="badge-num"><span>Badge #:</span> <%= model.badge_number %></div>
+      <div class="total-payments-container"><span class="total-payments">$<%= Number(model.total_payments).formatMoney() %></span> <span>total payments for all related cases</span><div>
+    </div>
   </div>
 </script>
 
 <script type="text/tmpl" id="case-search-statement-tmpl">
-<span class="clickable"><%= incidents %></span> incidents<% if ( neighborhood !== "" && neighborhood !== "unknown" ) { %> near <span class="clickable"><%= neighborhood %></span><% } %> resulted in payments totalling <span class="clickable">$<%= payments.formatMoney() %></span>
+<span class="clickable"><%= incidents %></span> incidents<% if ( neighborhood !== "" && neighborhood !== "unknown" ) { %> near <span class="clickable"><%= neighborhood %></span><% } %> resulted in payments totalling <span class="clickable">$<%= payments.formatMoney(0) %></span>
 
 </script>
 {% endblock %}
